--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Muyu's Blog
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
+author: Muyu
 language: en
 timezone: ''
 
@@ -104,5 +104,5 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: 'git'
- # repo: git@github.com:laughingrss/muyu-blog
+  repo: git@github.com:laughingrss/muyu-blog
   branch: gh-pages
